added clarification manager and UI changes
